<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-11dp"
    tools:layout_editor_absoluteY="5dp">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="302dp"
        android:layout_height="147dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/englishWord"
            android:layout_width="302dp"
            android:layout_height="40dp"
            android:hint="@string/english"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="356dp" />

        <EditText
            android:id="@+id/otherWord"
            android:layout_width="302dp"
            android:layout_height="40dp"
            android:hint="@string/other"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="476dp" />

        <EditText
            android:id="@+id/russianWord"
            android:layout_width="302dp"
            android:layout_height="40dp"
            android:hint="@string/russian"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="416dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/color"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:hint="@string/color"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="279dp" />

    <EditText
        android:id="@+id/topicName"
        android:layout_width="302dp"
        android:layout_height="49dp"
        android:hint="@string/topic"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/save"
        android:layout_width="76dp"
        android:layout_height="37dp"
        android:onClick="onClickSave"
        android:text="@string/save"
        tools:layout_editor_absoluteX="334dp"
        tools:layout_editor_absoluteY="2dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="519dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="119dp"
        android:layout_height="46dp"
        android:text="@string/remove"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="529dp" />

</androidx.constraintlayout.widget.ConstraintLayout>